feat(create-category): add validation for create category with null name